# tp2-cg

./: .gitignore  CMakeLists.txt
includes/Applications/: MainApplication.hpp
includes/Domain/: Color.hpp  ColorPicker.hpp  Polygon.hpp  StatusBar.hpp
includes/Interfaces/: Application.hpp  Window.hpp
includes/Utils/: Commons.hpp  Utils.hpp
includes/Windows/: MainWindow.hpp
src/: main.cpp
src/Applications/: MainApplication.cpp
src/Domain/: Color.cpp  ColorPicker.cpp  Polygon.cpp  StatusBar.cpp
src/Windows/: MainWindow.cpp
tests/: main.cpp
